# News-cli

./: .gitignore  .prettierrc.toml  LICENSE  README.md  errors.py  fetchData.py  fileConvert.py  flake.nix  news.py  pyproject.toml  scrapedData.csv
data/: scrapedData.json
newsCli/: news.py
src/: clicks.py  fetchData.py  fileConvert.py  news.py
